tests/ui/inference/need_type_info/self-ty-in-path.stderr
error[E0282]: type annotations needed
  --> $DIR/self-ty-in-path.rs:8:9
   |
LL |         Self::func_a();
   |         ^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the associated function `func_a`
   |
note: type must be known for type parameter in this
  --> $DIR/self-ty-in-path.rs:5:5
   |
LL |     fn func_a<U>() {}
   |     ^^^^^^^^^^^^^^
help: consider specifying the generic argument
   |
LL |         Self::func_a::<U>();
   |                     +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
